# py-prisma

./: README.md  pyproject.toml
demo/: run.py  test.py
src/: __init__.py  py_prisma.py
src/py_prisma/: __init__.py  loader.py  prisma.py  validation.py
